# dedupe

./: .gitignore  Dedupe.command  PLAN.md  README.md  install.sh  pyproject.toml  requirements-human.txt  requirements-photon.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
launchers/: Dedupe.command
packaging/: README.md
scripts/: build-macos-app.sh  release-macos-app.sh
src/dedupe/: __init__.py  actions.py  cache.py  cli.py  engine.py  exact.py  grouping.py  human_benchmark.py  human_detection.py  human_policy.py  models.py  parallel.py  review_session.py  scanner.py  similar_image.py  similar_video.py  similarity_benchmark.py
src/dedupe/web/: __init__.py  app.py  media.py  native_picker.py
src/dedupe/web/static/: app.css  app.js
src/dedupe/web/templates/: index.html
tests/: test_actions.py  test_browser_workflow.py  test_cache.py  test_cli.py  test_engine.py  test_exact.py  test_grouping.py  test_human_benchmark.py  test_human_detection.py  test_isolate.py  test_parallel.py  test_review_session.py  test_similar_image.py  test_similar_video.py  test_similarity_benchmark.py  test_web.py
